minikube-localhost-k8s/viki-web-teminal/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viki-web-terminal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:    
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: viki-web-terminal
            port:
              number: 7681
